adding car to canvas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas>
+		<script src="./src/car.js"></script>
 		<script src="./src/main.js"></script>
 	</body>
 </html>
