--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas>
+		<script src="./src/sensor.js"></script>
+		<script src="./src/utils.js"></script>
+		<script src="./src/road.js"></script>
+		<script src="./src/controls.js"></script>
 		<script src="./src/car.js"></script>
 		<script src="./src/main.js"></script>
 	</body>
